[package]
name = "website-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
sha2 = "0.10.8"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
openssl = { version = "0.10.64", features = ["vendored"] } 


[dependencies.mongodb]
version = "3.0.1"